tests/ui/variance/variance-trait-object-bound.stderr
error: ['a: +]
  --> $DIR/variance-trait-object-bound.rs:14:1
   |
LL | struct TOption<'a> {
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

